Add option to ignore whether ProtocolLib is loaded or not